--- a/Marketplace.Infrastructure/Marketplace.Infrastructure.csproj
+++ b/Marketplace.Infrastructure/Marketplace.Infrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EventStore.Client" Version="5.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="7.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Analyzers" Version="7.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.1">
