--- a/Marketplace/appsettings.json
+++ b/Marketplace/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "eventStore": {
+    "connectionString": "ConnectTo=tcp://admin:changeit@localhost:1113;DefaultUserCredentials=admin:changeit;"
+  },
+  "ravenDb": {
+    "server": "http://localhost:8080",
+    "database": "Marketplace_Chapter11"
+  }
 }
