--- a/Marketplace/appsettings.json
+++ b/Marketplace/appsettings.json
@@ -6,11 +6,33 @@
     }
   },
   "AllowedHosts": "*",
-  "eventStore": {
-    "connectionString": "ConnectTo=tcp://admin:changeit@localhost:1113;DefaultUserCredentials=admin:changeit;"
+  "EventStore": {
+    "connectionString": "ConnectTo=tcp://admin:changeit@localhost:1113; DefaultUserCredentials=admin:changeit;"
   },
-  "ravenDb": {
+  "RavenDb": {
     "server": "http://localhost:8080",
-    "database": "Marketplace_Chapter11"
+    "database": "Marketplace_Chapter13"
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.AspNetCore.SpaServices": "Information",
+        "System": "Debug"
+      }
+    },
+    "Enrich": [
+      "WithDemystifiedStackTraces"
+    ],
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Literate, Serilog.Sinks.Console",
+          "outputTemplate": "[{Timestamp:HH:mm:ss.fff} {Level:u3}] ({ThreadId:000}) {SourceContext} {Message}{NewLine}{Exception}"
+        }
+      }
+    ]
   }
 }
